--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,8 @@ button {
 
 .header {
   background-color: #008aff;
-  border-bottom-left-radius: 200px; }
+  border-bottom-left-radius: 200px;
+  margin: auto; }
   .header__top {
     position: relative;
     display: -webkit-box;
@@ -82,13 +83,9 @@ button {
 
 @media (max-width: 999px) {
   .header__top {
-    padding-top: 20px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column; }
+    padding: 20px; }
   .header__bottom {
-    padding-left: 50px;
+    padding: 0;
     display: block; } }
 
 @media (min-width: 1600px) {
@@ -96,6 +93,7 @@ button {
     padding-left: 15%; } }
 
 .nav {
+  position: relative;
   margin-left: 78px;
   width: 100%; }
   .nav__list {
@@ -104,11 +102,13 @@ button {
     display: -ms-flexbox;
     display: flex;
     margin: 0;
-    list-style: none; }
+    list-style: none;
+    -webkit-transition: opacity 0.9s;
+    transition: opacity 0.9s; }
   .nav__item {
     position: relative;
     margin-right: 4%; }
-  .nav__item:hover::after, .nav__link:focus::after {
+  .nav__link:hover::after, .nav__link:focus::after {
     content: "";
     position: absolute;
     width: 100%;
@@ -117,6 +117,44 @@ button {
     left: 0;
     background: #ff9c8e;
     border-radius: 4px; }
+  .nav__toggler {
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 40px;
+    height: 32px;
+    margin: 0;
+    opacity: 0;
+    cursor: pointer; }
+  .nav__burger {
+    display: none;
+    width: 33px;
+    height: 4px;
+    margin: 5px auto;
+    background-color: #fff;
+    border-radius: 3px;
+    -webkit-transform-origin: 4px 0;
+            transform-origin: 4px 0;
+    -webkit-transition: opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease, -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1); }
+    .nav__burger:nth-last-child(2) {
+      -webkit-transform-origin: 0% 100%;
+              transform-origin: 0% 100%; }
+  .nav__toggler:checked ~ .nav__burger {
+    -webkit-transform: rotate(45deg) translate(-2px, -1px);
+            transform: rotate(45deg) translate(-2px, -1px); }
+  .nav__toggler:checked ~ .nav__burger:nth-last-child(3) {
+    opacity: 0;
+    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
+            transform: rotate(0deg) scale(0.2, 0.2); }
+  .nav__toggler:checked ~ .nav__burger:nth-last-child(2) {
+    -webkit-transform: rotate(-45deg) translate(0, -1px);
+            transform: rotate(-45deg) translate(0, -1px); }
+  .nav__toggler:checked ~ .nav__list {
+    opacity: 1; }
 
 @media (max-width: 999px) {
   .nav {
@@ -127,9 +165,15 @@ button {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin: 20px auto 10px; }
+    margin: 20px 40px 10px; }
+    .nav__link:hover::after, .nav__link:focus::after {
+      content: "";
+      width: 0; }
     .nav__list {
-      max-width: 150px;
+      max-width: 280px;
+      top: 50px;
+      left: calc(50% - 63px);
+      position: absolute;
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
           -ms-flex-direction: column;
@@ -137,10 +181,18 @@ button {
       -webkit-box-pack: center;
           -ms-flex-pack: center;
               justify-content: center;
-      margin: auto; }
+      margin: 0 auto 30px;
+      z-index: 1;
+      opacity: 0; }
     .nav__item {
-      margin: 0;
-      text-align: center; } }
+      margin: 0 0 5px;
+      text-align: center; }
+    .nav__burger {
+      display: block; } }
+
+@media (max-width: 350px) {
+  .nav__list {
+    left: -12px; } }
 
 .header-info {
   max-width: 380px;
@@ -158,7 +210,16 @@ button {
 
 @media (max-width: 999px) {
   .header-info {
-    margin: auto; } }
+    margin: auto;
+    width: 280px;
+    text-align: center;
+    padding-top: 120px; }
+    .header-info__heading {
+      margin-bottom: 50px; } }
+
+@media (max-width: 350px) {
+  .header-info {
+    padding-top: 140px; } }
 
 .button {
   background-color: #ff9c8e;
@@ -488,8 +549,11 @@ button {
 
 @media (max-width: 999px) {
   .features {
-    margin: 50px 0;
-    padding: 100px 70px 70px 100px; }
+    display: block;
+    padding: 100px 70px 30px;
+    margin: 0 0 120px; }
+  .features-info {
+    margin: auto; }
   .features__image {
     display: none; } }
 
@@ -973,10 +1037,11 @@ button {
 
 @media (max-width: 999px) {
   .message {
-    margin: auto;
-    margin-bottom: 30px; }
-    .message__email, .message__name, .message__message {
-      width: 300px; } }
+    margin: 0 auto 30px; } }
+
+@media (max-width: 530px) {
+  .message__email, .message__name, .message__message {
+    max-width: 240px; } }
 
 .contact__heading {
   font-size: 32px;
@@ -1016,8 +1081,12 @@ button {
 
 @media (max-width: 999px) {
   .contact {
-    margin: auto;
-    margin-bottom: 30px; } }
+    width: 460px;
+    margin: auto; } }
+
+@media (max-width: 530px) {
+  .contact {
+    width: 260px; } }
 
 * {
   -webkit-box-sizing: border-box;
