--- a/styles/main.css
+++ b/styles/main.css
@@ -23,7 +23,8 @@ button,
 input,
 textarea {
   font-family: Poppins, sans-serif;
-  font-weight: bold; }
+  font-weight: bold;
+  color: #fff; }
 
 a {
   text-decoration: none;
@@ -323,7 +324,8 @@ button {
   padding: 10px; }
   .expertise__container {
     max-width: 1100px;
-    margin: 140px auto; }
+    margin: 140px auto;
+    padding: 0 30px; }
   .expertise__heading {
     color: #253757;
     font-weight: 600;
@@ -411,11 +413,13 @@ button {
         -ms-flex-align: center;
             align-items: center; }
   .process__process-info {
-    margin-bottom: 60px; } }
-
-@media (max-width: 999px) {
+    margin-bottom: 60px; }
   .process__cards {
-    grid-template-columns: 1fr; } }
+    grid-template-columns: minmax(1fr, 1fr); } }
+
+@media (max-width: 650px) {
+  .process__cards {
+    grid-template-columns: 264px; } }
 
 .process-info__title {
   display: block;
@@ -618,6 +622,7 @@ button {
     font-size: 13px;
     letter-spacing: 3px;
     text-transform: uppercase;
+    text-align: center;
     color: #c0cdd7;
     margin-bottom: 16px; }
   .testimonials__heading {
@@ -625,7 +630,8 @@ button {
     font-weight: 600;
     max-width: 200px;
     font-size: 32px;
-    margin-bottom: 85px; }
+    text-align: center;
+    margin: 0 auto 85px; }
   .testimonials__person-container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -806,7 +812,7 @@ button {
 
 .vision {
   position: relative;
-  padding: 200px 0;
+  padding: 200px 30px;
   background-color: #fff; }
   .vision__heading {
     color: #253757;
@@ -1002,7 +1008,8 @@ button {
   background-color: #008aff;
   border-bottom: 1px solid #fff;
   margin-bottom: 45px;
-  caret-color: #fff; }
+  caret-color: #fff;
+  font-weight: 600; }
   .message__email::-webkit-input-placeholder, .message__name::-webkit-input-placeholder, .message__message::-webkit-input-placeholder {
     font-weight: 600;
     font-size: 15px;
@@ -1040,8 +1047,17 @@ button {
     margin: 0 auto 30px; } }
 
 @media (max-width: 530px) {
+  .message__heading {
+    text-align: center; }
   .message__email, .message__name, .message__message {
-    max-width: 240px; } }
+    max-width: 280px;
+    margin: 0 auto 45px; }
+  .message__button {
+    margin: auto; } }
+
+@media (max-width: 330px) {
+  .message__email, .message__name, .message__message {
+    max-width: 220px; } }
 
 .contact__heading {
   font-size: 32px;
@@ -1086,7 +1102,14 @@ button {
 
 @media (max-width: 530px) {
   .contact {
-    width: 260px; } }
+    width: 260px;
+    text-align: center; }
+    .contact__media {
+      margin: auto; } }
+
+@media (max-width: 330px) {
+  .contact {
+    width: 200px; } }
 
 * {
   -webkit-box-sizing: border-box;
