--- a/styles/main.css
+++ b/styles/main.css
@@ -251,10 +251,9 @@ button {
 
 .slider {
   position: relative;
-  background: url(../images/slider/slide-img-4.png) no-repeat center;
   background-size: cover;
   border-top-left-radius: 200px;
-  padding-left: 50px;
+  padding-left: 20px;
   color: #fff; }
   .slider__button {
     position: absolute;
@@ -279,6 +278,8 @@ button {
     .slider__button:hover {
       -webkit-transform: scale(1.1);
               transform: scale(1.1); }
+  .slider__button-left {
+    left: 50px; }
   .slider__button-right {
     left: 90px; }
   .slider__arrow {
@@ -298,6 +299,39 @@ button {
     width: 264px;
     bottom: 40px;
     left: 145px; }
+
+.carousel {
+  list-style-type: none;
+  height: 100%;
+  width: 100%;
+  position: relative; }
+
+.carousel-item {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  border-top-left-radius: 180px; }
+
+.showing {
+  opacity: 1; }
+
+.carousel-item:nth-of-type(1) {
+  background-image: url("../images/slider/slide-img-1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.carousel-item:nth-of-type(2) {
+  background-image: url("../images/slider/slide-img-2.png");
+  background-size: cover;
+  background-repeat: no-repeat; }
+
+.carousel-item:nth-of-type(3) {
+  background-image: url("../images/slider/slide-img-3.png");
+  background-size: cover;
+  background-repeat: no-repeat; }
 
 @media (max-width: 999px) {
   .slider {
